added railway on backend

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,16 @@
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/Learningdb
+# PostgreSQL Database Configuration
+spring.datasource.url=jdbc:postgresql://junction.proxy.rlwy.net:10131/railway
 spring.datasource.username=postgres
-spring.datasource.password=123
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.datasource.password=YpbUpTIOGzOwJopAKtibuXLfrEfOrFWN
+
+# Hibernate Configuration
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+# Server Port
+server.port=8080
 
 
 # Increase log levels for debugging
