--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,6 +12,8 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 # Server Port
 server.port=8080
 
+app.cors.allowed-origins=http://localhost:3000,https://learning-backend-production-cbe4.up.railway.app
+
 
 # Increase log levels for debugging
 logging.level.org.springframework.web=DEBUG
